--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ libroyale-1.0.5.40-APPLE-64Bit/samples/data_*/**
 libroyale-1.0.5.40-APPLE-64Bit/samples/scanner/Release/**
 
 libroyale-1.0.5.40-APPLE-64Bit/samples/processing/Release/**
+
+libroyale-1.0.5.40-APPLE-64Bit/samples/data/**
